@@ -1,6 +1,6 @@
 
 #define PACKAGE_NAME    "QjackCtl"
-#define PACKAGE_VERSION "0.3.4.1"
+#define PACKAGE_VERSION "0.3.4.2"
 
 #define CONFIG_PREFIX   "."
 #define CONFIG_DEBUG    1
@@ -12,6 +12,7 @@
 #define CONFIG_JACK_STATISTICS
 #define CONFIG_JACK_XRUN_DELAY
 #define CONFIG_JACK_MAX_DELAY
+#define CONFIG_JACK_PORT_ALIASES
 
 #undef  CONFIG_JACK_MIDI
 #undef  CONFIG_ALSA_SEQ
